<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="125dp"
        android:text="@string/predmetinfo"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/btnFinito"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#1FE166"
        android:text="kraj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnFinito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/helperPre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/helperPre"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/frgm_txtPredmet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#a46a6a"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="242dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/helperProf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/helperProf"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/frgm_txtImeProf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="6dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#a46a6a"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="38dp" />

            <TextView
                android:id="@+id/frgm_txtPrezProf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#a46a6a"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/helperAkG"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/helperAkG"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/frgm_txtAkGod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#a46a6a"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frgm_txtPrezProf" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/helperBP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/helperBP"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/frgm_txtBrPred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#a46a6a"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frgm_txtAkGod" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/helperBLV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/helperBLV"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/frgm_txtBrLV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#a46a6a"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frgm_txtBrPred" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/helperImPr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="6dp"
                android:gravity="center"
                android:text="@string/helperImPr"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/frgm_txtIme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="6dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#a46a6a"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="38dp" />

            <TextView
                android:id="@+id/frgm_txtPrezime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#a46a6a"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/helperDat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/helperDat"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/frgm_txtDatum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="#a46a6a"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frgm_txtPrezime" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="120dp"
        android:text="@string/studentinfo"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="17dp"
        android:background="#80AAAAAA"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgProfilna2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher"
            tools:srcCompat="@tools:sample/avatars" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>